Actions
Bug #12264
closedhalt: unused label
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
halt.c:709: error: label 'validate_zfs_err_out' defined but not used [-Wunused-label]
Updated by Marcel Telka over 2 years ago
Updated by Marcel Telka over 2 years ago
Testing Done
Nightly passed even without -Wno-unused-label for halt.
Updated by Marcel Telka 4 months ago
- Status changed from In Progress to Pending RTI
Updated by Dan McDonald 4 months ago
Performed disassembly diffs, nothing substantive changed:
nowhere(cmd/halt)[0]% dis halt > /tmp/after nowhere(cmd/halt)[0]% wc -l /tmp/{before,after} 4036 /tmp/before 4036 /tmp/after 8072 total nowhere(cmd/halt)[0]% diff /tmp/{before,after} 1172c1172 < get_zfs_bootfs_arg+0x2b5: 68 60 74 06 08 pushl $0x8067460 <fmt.10798> --- > get_zfs_bootfs_arg+0x2b5: 68 60 74 06 08 pushl $0x8067460 <fmt.10797> nowhere(cmd/halt)[1]% grep unused * nowhere(cmd/halt)[1]%
Updated by Electric Monk 4 months ago
- Status changed from Pending RTI to Closed
- % Done changed from 0 to 100
git commit 1b2ec6d6cf3fc8870f15f0100929dfde15fb32c6
commit 1b2ec6d6cf3fc8870f15f0100929dfde15fb32c6 Author: Marcel Telka <marcel@telka.sk> Date: 2022-01-10T15:53:19.000Z 12264 halt: unused label Reviewed by: Matthias Scheler <mscheler@tintri.com> Reviewed by: Toomas Soome <tsoome@me.com> Reviewed by: Peter Tribble <peter.tribble@gmail.com> Reviewed by: Gergő Mihály Doma <domag02@gmail.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions